- categorised pulumi docs for azure provider in Readmes